--- a/wines/pom.xml
+++ b/wines/pom.xml
@@ -5,11 +5,11 @@
 
 	<groupId>com.anthonini</groupId>
 	<artifactId>wines</artifactId>
-	<version>0.0.1</version>
+	<version>1.0.0</version>
 	<packaging>jar</packaging>
 
 	<name>wines</name>
-	<description>A simple sytem to register wines using Spring Boot, Spring MVC, Spring Data JPA, Spring Security, Ajax, Thymeleaf, Bootstrap, Jquery, MySQL.</description>
+	<description>A simple system to register wines using Spring Boot, Spring MVC, Spring Data JPA, Spring Security, Ajax, Thymeleaf, Bootstrap, Jquery, MySQL.</description>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
@@ -26,17 +26,21 @@
 		<thymeleaf.version>3.0.9.RELEASE</thymeleaf.version>
 		<thymeleaf-layout-dialect.version>2.3.0</thymeleaf-layout-dialect.version>
 		<thymeleaf-extras-data-attribute.version>2.0.1</thymeleaf-extras-data-attribute.version>
+		<thymeleaf-extras-springsecurity4.version>3.0.1.RELEASE</thymeleaf-extras-springsecurity4.version>
 	</properties>
 
 	<dependencies>
+		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
+		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
 		</dependency>
+		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
@@ -47,11 +51,12 @@
 			<artifactId>spring-boot-devtools</artifactId>
 			<scope>runtime</scope>
 		</dependency>
+		
 		<dependency>
-			<groupId>com.h2database</groupId>
-			<artifactId>h2</artifactId>
-			<scope>runtime</scope>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
 		</dependency>
+		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
@@ -62,6 +67,17 @@
 			<groupId>com.github.mxab.thymeleaf.extras</groupId>
     		<artifactId>thymeleaf-extras-data-attribute</artifactId>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+		
+		<dependency>
+        	<groupId>org.thymeleaf.extras</groupId>
+	        <artifactId>thymeleaf-extras-springsecurity4</artifactId>
+	    </dependency>    
+
 	</dependencies>
 
 	<build>
@@ -72,6 +88,5 @@
 			</plugin>
 		</plugins>
 	</build>
-
 
 </project>
