--- a/wines/src/main/resources/application.properties
+++ b/wines/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.thymeleaf.mode=HTML
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/wines
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.jpa.hibernate.ddl-auto=update
